<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trnng</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">GET DATA</string>
    <string name="flower_name_placeholder"/>
    <string name="flower_activity">Flowers</string>
    <string name="button_training_activity">ButtonTraining</string>
    <string name="intent_training_activity">Intent</string>
    <string name="saveState_training_activity">saveInstanceState</string>
    <string name="toast_training_activity">Toast</string>
    <string name="customToast_activity">Custom Toast</string>
    <string name="calculate_activity">Calculate</string>
    <string name="UI_trnng">UI training</string>
    <string name="fb_ui_example">FB UI</string>
    </resources>
