<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_flwr_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flower_activity"
        android:onClick="openActivity"/>
    <Button
        android:id="@+id/btn_btn_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_training_activity"
        android:onClick="openActivity"/>
    <Button
        android:id="@+id/btn_intent_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_training_activity"
        android:onClick="openActivity"/>

    <Button
        android:id="@+id/btn_savedInstanceState_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveState_training_activity"
        android:onClick="openActivity"/>

    <Button
        android:id="@+id/btn_toast_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_training_activity"
        android:onClick="openActivity"
        android:layout_below="@+id/btn_savedInstanceState_activity" />

</LinearLayout>